# internal/app/infrastructure/sqlc/models.go
@@ -75,7 +75,7 @@ type Transaction struct {
 type User struct {
 	ID            uuid.UUID
 	PhoneNumber   string
-	FullName      string
+	Username      string
 	Password      string
 	WalletBalance string
 	Role          string
